--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 </table>
     <table  width="100%" bgcolor="black">
         <tr>
-                <td align="center"><a href="../inicio/index.html"><img src="C:\Users\sinai\Desktop\inicio\inicio.png"width="70" height="70"></td>
+                <td align="center"><a href="https://waleska17.github.io/23waleskamartinez17/."><img src="C:\Users\sinai\Desktop\inicio\inicio.png"width="70" height="70"></td>
                     <td align="center"><font color="white"><h1>lll</h1></font></td> 
-                <td align="center"><a href="../Biografia/index.html"><img src="C:\Users\sinai\Desktop\inicio\Biografia.png"width="80" height="80"></td>
+                <td align="center"><a href="https://waleska17.github.io/Biografia/"><img src="C:\Users\sinai\Desktop\inicio\Biografia.png"width="80" height="80"></td>
                     <td align="center"><font color="white"><h1>lll</h1></font></td> 
-                <td align="center"><a href="../Albumes y Canciones/index.html"><img src="C:\Users\sinai\Desktop\inicio\Disco.png"width="80" height="80"></a></td>
+                <td align="center"><a href=" https://waleska17.github.io/cancionez/"><img src="C:\Users\sinai\Desktop\inicio\Disco.png"width="80" height="80"></a></td>
                 <td align="center"><font color="white"><h1>lll</h1></font></td> 
-                <td align="center"><a href="../Contacto y Formulario/index.html"><img src="C:\Users\sinai\Desktop\inicio\formulario.png" width="70" height="70"></a></td> 
+                <td align="center"><a href="https://waleska17.github.io/formulario/"><img src="C:\Users\sinai\Desktop\inicio\formulario.png" width="70" height="70"></a></td> 
         </tr>
     </table>
 <img src="https://mma.prnewswire.com/media/897807/BTS_WORLD_Netmarble_Corp.jpg?p=facebook"width="100%" height="700">
